--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -178,4 +178,5 @@
     src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.6435-9/82211036_774206829750310_7014219710820515840_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=e3f864&_nc_ohc=dcVFWyWYGTcAX9WyYzR&tn=aMXhMJ61Pjs7ypTG&_nc_ht=scontent-mxp1-1.xx&oh=f94c926f6cf29c682109fdbdf2500989&oe=60E4A470"
     alt=""
   />
+  <button class="upBtn" (click)="backToTop()">^ Torna all'inizio ^</button>
 </div>
