--- a/src/app/progress-bar/progress-bar.component.scss
+++ b/src/app/progress-bar/progress-bar.component.scss
@@ -1,10 +1,13 @@
 .progress-bar-container {
   background-color: rgb(199, 197, 197);
   position: fixed;
-  top: 60px;
+  top: 62px;
   left: 0;
   width: 100%;
   height: 50px;
+  line-height: 0.5;
+  padding: 10px 0;
+  z-index: 100;
   .progress {
     margin-left: 49%;
     font-weight: bold;
@@ -28,4 +31,18 @@
 
 .text-container {
   margin-top: 120px;
+  position: relative;
+  .upBtn {
+    background-color: blueviolet;
+    color: white;
+    font-weight: bold;
+    padding: 15px 10px;
+    border-radius: 20px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
