--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
   <a routerLink="MultiStepForm" class="menu-item" routerLinkActive="active"
     >multi-step-form</a
   >
+  <a routerLink="ToggleSidebar" class="menu-item" routerLinkActive="active"
+    >toggle-sidebar</a
+  >
 </nav>
 
 <router-outlet></router-outlet>
