--- a/src/app/progress-bar/progress-bar.component.scss
+++ b/src/app/progress-bar/progress-bar.component.scss
@@ -1,7 +1,9 @@
+@import '../../styles.scss';
+
 .progress-bar-container {
   background-color: rgb(199, 197, 197);
   position: fixed;
-  top: 62px;
+  top: $navbar-width;
   left: 0;
   width: 100%;
   height: 50px;
