--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
   <a routerLink="ToggleSidebar" class="menu-item" routerLinkActive="active"
     >toggle-sidebar</a
   >
+  <a routerLink="CssGrid" class="menu-item" routerLinkActive="active"
+    >grid (Bonus)</a
+  >
 </nav>
 
 <router-outlet></router-outlet>
