--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,7 @@
 }
 
 // variables
-$navbar-width: 62px;
+$navbar-width: 59px;
+$navbar-color: aliceblue;
+$hover-color: black;
+$active-a-nav-tag-color: aquamarine;
