--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,16 @@
+@import '../styles.scss';
+
 .menu {
   display: flex;
-  background-color: white;
+  background-color: $navbar-color;
+  justify-content: space-between;
+  border-bottom: 1px solid;
   .menu-item {
-    border: 2px solid black;
     font-size: 16px;
     padding: 20px;
     text-decoration: none;
     &:hover {
-      background-color: black;
+      background-color: $hover-color;
       color: white;
     }
   }
@@ -21,5 +24,5 @@
 }
 
 .active {
-  background-color: aquamarine;
+  background-color: $active-a-nav-tag-color;
 }
