--- a/src/app/autosuggest/autosuggest.component.html
+++ b/src/app/autosuggest/autosuggest.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <h2>Google Places Autocomplete</h2>
+  <p>Non funziona solo perchè devo pagare google, e non mi va!</p>
   <input
     ngx-google-places-autocomplete
     [options]="options"
