--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@
   background-color: $navbar-color;
   justify-content: space-between;
   border-bottom: 1px solid;
+  margin-bottom: 20px;
   .menu-item {
     font-size: 16px;
     padding: 20px;
