--- a/src/app/css-grid/css-grid.component.html
+++ b/src/app/css-grid/css-grid.component.html
@@ -1,1 +1,26 @@
-<p>css-grid works!</p>
+<div class="grid-container">
+  <div class="grid-item1">Sono l'1</div>
+  <div class="grid-item2">Sono il 2</div>
+  <div class="grid-item3">Sono il 3</div>
+  <div class="grid-item4">Sono il 4</div>
+  <div class="grid-item5">Sono il 5</div>
+  <div class="grid-item6">Sono il 6</div>
+</div>
+<hr />
+<div class="grid-container2">
+  <div class="grid-item1">Sono l'altro 1</div>
+  <div class="grid-item2">Sono l'altro 2</div>
+  <div class="grid-item3">Sono l'altro 3</div>
+  <div class="grid-item4">Sono l'altro 4</div>
+  <div class="grid-item5">Sono l'altro 5</div>
+  <div class="grid-item6">Sono l'altro 6</div>
+</div>
+<hr />
+<div class="grid-container3">
+  <div class="grid-item1">Sono l'altro 1 ancora</div>
+  <div class="grid-item2">Sono l'altro 2 ancora</div>
+  <div class="grid-item3">Sono l'altro 3 ancora</div>
+  <div class="grid-item4">Sono l'altro 4 ancora</div>
+  <div class="grid-item5">Sono l'altro 5 ancora</div>
+  <div class="grid-item6">Sono l'altro 6 ancora</div>
+</div>
