fine multi step form (fatto l'essenziale, ancora molto da migliorare)

--- a/src/app/multi-step-form/details-form/details-form.component.html
+++ b/src/app/multi-step-form/details-form/details-form.component.html
@@ -29,6 +29,8 @@
       formControlName="email"
       placeholder="email"
     />
-    <button type="submit" class="btn" [disabled]="details.invalid">next</button>
+    <button type="submit" class="btn" [disabled]="detailsForm.invalid">
+      next
+    </button>
   </div>
 </form>
