--- a/src/app/multi-step-form/multi-step-form.component.scss
+++ b/src/app/multi-step-form/multi-step-form.component.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: azure;
     -webkit-box-shadow: 0px 0px 10px 0px #000000;
     box-shadow: 0px 0px 20px 0px #000000;
     position: relative;
