Aggiunto classi per creare lo scheletro degli oggetti per i form

--- a/src/app/multi-step-form/details-form/details-form.component.html
+++ b/src/app/multi-step-form/details-form/details-form.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="detailsForm" (ngSubmit)="onSubmit()" *ngIf="details">
   <div class="details">
+    <h2 class="title">Step-2</h2>
     <div class="gender">
       <h3>sesso</h3>
       <label class="label-gender">
@@ -22,7 +23,7 @@
         />donna</label
       >
     </div>
-
+    <h3>email</h3>
     <input
       type="email"
       name="email"
