--- a/src/app/multi-step-form/generality-form/generality-form.component.html
+++ b/src/app/multi-step-form/generality-form/generality-form.component.html
@@ -1,5 +1,7 @@
 <form [formGroup]="generalityForm" (ngSubmit)="onSubmit()">
   <div class="generality">
+    <h2 class="title">Step-1</h2>
+
     <input type="text" name="nome" formControlName="nome" placeholder="nome" />
     <input
       type="text"
