--- a/src/app/multi-step-form/multi-step-form.component.html
+++ b/src/app/multi-step-form/multi-step-form.component.html
@@ -27,7 +27,7 @@
       "
     >
       <div class="accept">
-        <h2>Riepilogo</h2>
+        <h2 class="title">Riepilogo</h2>
         <p>nome: {{ formGeneralityInfo.nome }}</p>
         <p>cognome: {{ formGeneralityInfo.cognome }}</p>
         <p>età: {{ formGeneralityInfo.eta }}</p>
