--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,8 @@ $navbar-width: 59px;
 $navbar-color: aliceblue;
 $hover-color: black;
 $active-a-nav-tag-color: aquamarine;
+
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+}
